Navigation ancor and link fix

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
               </div>
               <div class="nav">
                 <a href="#about">About</a>
-                <a href="#hiring">Team</a>  
+                <a href="#team">Team</a>  
                 <a href="#hiring">Work with us</a>  
-                <a href="#hiring">Contact us</a>
+                <a href="mailto:hello@betalablimited.com">Contact us</a>
               </div>
             </div>
           </header>
