Gianluca position update

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <img src="images/gianluca.jpg"/>
                   </div>
                   <div class="name">Gianluca Farina</div>
-                  <div class="description">Italian food valorous defender, presides over the stove to cook the perfect spaghetti carbonara whenever he gets the chance.<br/>Sales Account.</div>
+                  <div class="description">Italian food valorous defender, presides over the stove to cook the perfect spaghetti carbonara whenever he gets the chance.<br/>Key Account & Project Manager.</div>
                 </div>
               </div>
             </div>
