--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="#about">About</a>
                 <a href="#team">Team</a>  
                 <a href="#hiring">Work with us</a>  
-                <a href="mailto:hello@betalablimited.com">Contact us</a>
+                <a href="mailto:hello@betalab.tech">Contact us</a>
               </div>
             </div>
           </header>
@@ -97,7 +97,7 @@
           <div class="wrapper">
             <div class="grid">
               <div class="grid-item md-1/2">
-                <p><a href="betalablimited.com">betalablimited.com</a><br/><a href="mailto:hello@betalablimited.com">hello@betalablimited.com</a><br/>+44 738 028 8162</p>
+                <p><a href="http://betalab.tech">betalab.tech</a><br/><a href="mailto:hello@betalab.tech">hello@betalab.tech</a><br/>+44 738 028 8162</p>
               </div>
               <div class="grid-item md-1/2">
                 <p>110 Petherton Road<br/>N5 2RT<br/>London, England<br/>United Kingdom</p>
