fix contact us mailto in job page

--- a/frontend.html
+++ b/frontend.html
@@ -30,7 +30,7 @@
                 <a href="./#about">About</a>
                 <a href="./#team">Team</a>  
                 <a href="./#hiring">Work with us</a>  
-                <a href="./mailto:hello@betalab.tech">Contact us</a>
+                <a href="mailto:hello@betalab.tech">Contact us</a>
               </div>
             </div>
           </header>
