--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
             <div class="wrapper">
               <h1>About Us</h1><a name="about"></a>
               <p>Beta Lab is a digital factory that designs time management solutions for professionals and employees.</p>
-              <p>Our team is formed by badass tech explorers striving to bring innovation in everyday life.<br/>
-              Our clients are all covered by NDA.</p>
+              <p>Our team is formed by badass tech explorers striving to bring innovation in everyday life.</p>
             </div>
           </section>
           <section class="team">
