--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
                 </div>
                 <div class="team--element">
                   <div class="picture">
+                    <img src="images/lumi.jpg"/>
+                  </div>
+                  <div class="name">Lumi Buttress</div>
+                  <div class="description">Inquisitive listener. Join her running en plain air when not couchsurfing the world. <br/>
+                    Assists organizations in achieving their goals.<br/>Account Manager</div>
+                </div>
+                <div class="team--element">
+                  <div class="picture">
                     <img src="images/gianluca.jpg"/>
                   </div>
                   <div class="name">Gianluca Farina</div>
