Updating Lumi name

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <div class="picture">
                     <img src="images/lumi.jpg"/>
                   </div>
-                  <div class="name">Lumi Buttress</div>
+                  <div class="name">Luminita Butuc</div>
                   <div class="description">Inquisitive listener. Join her running en plain air when not couchsurfing the world. <br/>
                     Assists organizations in achieving their goals.<br/>Account Manager</div>
                 </div>
