--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <img src="images/lumi.jpg"/>
                   </div>
                   <div class="name">Luminita Butuc</div>
-                  <div class="description">Inquisitive listener. Join her running en plain air when not couchsurfing the world. <br/>
+                  <div class="description">Inquisitive listener. Join her running <i>en plain air</i> when not couchsurfing the world. <br/>
                     Assists organizations in achieving their goals.<br/>Account Manager</div>
                 </div>
                 <div class="team--element">
