--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           <section class="hiring"> 
             <div class="wrapper">
               <h1>We are hiring!</h1><a name="hiring"></a>
+              <p>We consider time and technology our most treasured possessions. We work hard every day to give people the power to win back their time through the best technology available.</p>
               <p>We are looking for the best minds.<br/>Check out our open positions.</p>
               <a href="frontend.html" class="job">frontend developer</a>
             </div>
