Removing phone number

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="wrapper">
             <div class="grid">
               <div class="grid-item md-1/2">
-                <p><a href="http://betalab.tech">betalab.tech</a><br/><a href="mailto:hello@betalab.tech">hello@betalab.tech</a><br/>+44 738 028 8162</p>
+                <p><a href="http://betalab.tech">betalab.tech</a><br/><a href="mailto:hello@betalab.tech">hello@betalab.tech</a></p>
               </div>
               <div class="grid-item md-1/2">
                 <p>110 Petherton Road<br/>N5 2RT<br/>London, England<br/>United Kingdom</p>
