Updating Stack of Frontend page

--- a/frontend.html
+++ b/frontend.html
@@ -39,9 +39,10 @@
               <h1>Frontend Developer</h1>
               <p>We're looking for a React developer to be included straight away (starting Tomorrow) in the remote freelancers team for the development of a B2B platform of high performance with the following operations stack:</span></p>
               <ul>
-                <li>GitHub</span></li>
+                <li>GitLab</span></li>
                 <li>Slack</span></li>
-                <li>DigitalOcean / AWS</span><br /><br /></span></li>
+                <li>Docker</span></li>
+                <li>DigitalOcean</span><br /><br /></span></li>
               </ul>
               <p>Requirements:</p>
               <ul>
