Adding backend page

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
               <p>We consider time and technology our most treasured possessions. We work hard every day to give people the power to win back their time through the best technology available.</p>
               <p>We are looking for the best minds.<br/>Check out our open positions.</p>
               <a href="frontend.html" class="job">frontend developer</a>
+              <a href="backend.html" class="job">backend developer</a>
             </div>
           </section>
         </main>
