Adding database to backend offer

--- a/backend.html
+++ b/backend.html
@@ -48,6 +48,7 @@
               <ul>
                 <li>Expert knowledge of ES6</li>
                 <li>Expert knowledge of NodeJS</li>
+                <li>Expert knowledge of PostgreSQL</li>
                 <li>Knowledge in CI methodologies</li>
                 <li>Awareness of build, release and deployment processes</li>
               </ul>
