Updating company address

--- a/frontend.html
+++ b/frontend.html
@@ -73,7 +73,12 @@
                 <p><a href="http://betalab.tech">betalab.tech</a><br/><a href="mailto:hello@betalab.tech">hello@betalab.tech</a></p>
               </div>
               <div class="grid-item md-1/2">
-                <p>110 Petherton Road<br/>N5 2RT<br/>London, England<br/>United Kingdom</p>
+                <p>
+                  72 North Street<br/>
+                  RM1 1DA<br/>
+                  Romford, England<br/>
+                  United Kingdom
+                </p>
               </div>
             </div>
           </div>
